infra/preview/np-sync.yaml
---
# Source: np-sync/templates/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ip-whitelist
spec:
  podSelector: {}  # Apply to all pods in the namespace
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - ipBlock:
        - 127.0.0.1/32
        - 192.168.1.2/32
---
# Source: np-sync/charts/gsuite/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-sync-gsuite
  labels:
    helm.sh/chart: gsuite-2.1.2896
    app.kubernetes.io/name: gsuite
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gsuite
    app.kubernetes.io/instance: np-sync
---
# Source: np-sync/charts/mssql/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-sync-mssql
  labels:
    app: np-sync-mssql
    chart: mssql-1.2.3
    release: np-sync
    heritage: Helm
spec:
  type: ClusterIP
  ports:
  - name: mssql
    port: 1433
    targetPort: mssql
    protocol: TCP
  selector:
    app: np-sync-mssql
    release: np-sync
---
# Source: np-sync/charts/slack/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-sync-slack
  labels:
    helm.sh/chart: slack-2.1.2896
    app.kubernetes.io/name: slack
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: slack
    app.kubernetes.io/instance: np-sync
---
# Source: np-sync/charts/gsuite/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-sync-gsuite
  labels:
    helm.sh/chart: gsuite-2.1.2896
    app.kubernetes.io/name: gsuite
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gsuite
      app.kubernetes.io/instance: np-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gsuite
        app.kubernetes.io/instance: np-sync
    spec:
      imagePullSecrets:
        - name: np-acr-secret
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: gsuite
          securityContext:
            {}
          image: "networkperspective.azurecr.io/connectors/gsuite:2.1.2896"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: rsa-keys
              mountPath: "/app/keys"              
            - name: secrets
              mountPath: "/app/secrets"              
            - name: config-volume
              mountPath: /app/appsettings.Production.json
              subPath: appsettings.Production.json
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 1
              memory: 4G
            requests:
              cpu: 400m
              memory: 0.5G
      volumes:
      - name: logs
        emptyDir: {}           
      - name: rsa-keys
        secret:
          secretName: np-sync-rsa 
      - name: secrets
        secret:
          secretName: np-sync-gsuite-secrets
      - name: config-volume
        configMap:
          name: np-sync-appsettings
---
# Source: np-sync/charts/slack/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-sync-slack
  labels:
    helm.sh/chart: slack-2.1.2896
    app.kubernetes.io/name: slack
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: slack
      app.kubernetes.io/instance: np-sync
  template:
    metadata:
      labels:
        app.kubernetes.io/name: slack
        app.kubernetes.io/instance: np-sync
    spec:
      imagePullSecrets:
        - name: np-acr-secret
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: slack
          securityContext:
            {}
          image: "networkperspective.azurecr.io/connectors/slack:2.1.2896"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: logs
              mountPath: /app/logs
            - name: rsa-keys
              mountPath: "/app/keys"              
            - name: secrets
              mountPath: "/app/secrets"              
            - name: config-volume
              mountPath: /app/appsettings.Production.json
              subPath: appsettings.Production.json
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 1
              memory: 4G
            requests:
              cpu: 400m
              memory: 0.5G
      volumes:
      - name: logs
        emptyDir: {}           
      - name: rsa-keys
        secret:
          secretName: np-sync-rsa 
      - name: secrets
        secret:
          secretName: np-sync-slack-secrets
      - name: config-volume
        configMap:
          name: np-sync-appsettings
---
# Source: np-sync/charts/mssql/templates/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: np-sync-mssql
  labels:
    app: np-sync-mssql
    chart: mssql-1.2.3
    release: np-sync
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: np-sync-mssql
      release: np-sync
  template:
    metadata:
      labels:
        app: np-sync-mssql
        release: np-sync
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 10001
      containers:
        - name: mssql
          image: "mcr.microsoft.com/mssql/server:2022-latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mssql
              containerPort: 1433
          volumeMounts:
            - name: data
              mountPath: /var/opt/mssql
          livenessProbe:
             tcpSocket:
               port: mssql
             initialDelaySeconds: 15
             periodSeconds: 20
          readinessProbe:
             tcpSocket:
               port: mssql
             initialDelaySeconds: 5
             periodSeconds: 10
          resources:
            limits:
              cpu: 800m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 1Gi    
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: np-sync-mssql-data
---
# Source: np-sync/charts/gsuite/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: np-sync-gsuite
  labels:
    helm.sh/chart: gsuite-2.1.2896
    app.kubernetes.io/name: gsuite
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gsuite-c1.test.networkperspective.io
      secretName: np-sync-gsuite-production-tls
  rules:
    - host: "gsuite-c1.test.networkperspective.io"
      http:
        paths:
          - path: /            
            pathType: Prefix            
            backend:
              service:
                name: np-sync-gsuite
                port:
                  number: 80
---
# Source: np-sync/charts/slack/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: np-sync-slack
  labels:
    helm.sh/chart: slack-2.1.2896
    app.kubernetes.io/name: slack
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - slack-c1.test.networkperspective.io
      secretName: np-sync-slack-production-tls
  rules:
    - host: "slack-c1.test.networkperspective.io"
      http:
        paths:
          - path: /            
            pathType: Prefix            
            backend:
              service:
                name: np-sync-slack
                port:
                  number: 80
---
# Source: np-sync/charts/gsuite/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "np-sync-gsuite-test-connection"
  labels:
    helm.sh/chart: gsuite-2.1.2896
    app.kubernetes.io/name: gsuite
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['np-sync-gsuite:80']
  restartPolicy: Never
---
# Source: np-sync/charts/slack/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "np-sync-slack-test-connection"
  labels:
    helm.sh/chart: slack-2.1.2896
    app.kubernetes.io/name: slack
    app.kubernetes.io/instance: np-sync
    app.kubernetes.io/version: "2.1.2896"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['np-sync-slack:80']
  restartPolicy: Never
